--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,12 @@
     margin:1rem;
     padding: 1rem;
 }
+
+#output{
+    border:1px solid black;
+    height:10vh;
+    width:85%;
+    margin:1rem;
+    padding : 1rem;
+
+}
