--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
+body{
+    font-family: 'Indie Flower', cursive;
+    margin: 0%;
+    background-color: #fbbf24;
+}
 
-
-.header{
+#input {
+    padding: 2rem;
+    width: 50%;
     text-align: center;
-    font-size: larger;
-    background-color: yellow;
-    margin-left:50px;
-    margin-right:50px;
-    padding:70px;
-    
-}
-
-
-
-.textarea{
-    width:85%;
-    height: 10vh;
-    display:block;
-    margin:1rem;
+    display: block;
+    margin: 50px auto;
+  }
+  
+  #translate-btn {
+    text-align: center;
     padding: 1rem;
-}
+    margin: 20px 40%;
+    border-radius: 12px;
+    width: 20%;
+    background-color: olive;
+  }
+  
+  #translate-btn:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+      0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
+  
+  #output {
+    border: 2px solid black;
+    margin: 10px auto;
+    padding: 5rem;
+    height: 10rem;
+    width: 50%;
+    text-align: center;
+  }
+  
+  h1 {
+    text-align: center;
+    background-color: #fde68a;
+  
+    margin: auto;
+    padding: 2rem;
+    height: 100px;
+    color: darkslategray;
+    font-family: fantasy;
+    font-weight: bolder;
+  }
 
-
-
-#output{
-    border:1px solid black;
-    height:10vh;
-    width:85%;
-    margin:1rem;
-    padding : 1rem;
-
-}
+  h2 {
+    text-align: center;
+    background-color: #fde68a;
+  
+    margin: auto;
+    padding: 2rem;
+    height: 100px;
+    color: darkslategray;
+    font-family: fantasy;
+    font-weight: bolder;
+  }
+ 
+  .font-output {
+    margin: 30px 40%;
+  
+    font-family: monospace;
+    font-size: larger;
+    font-weight: bolder;
+  }
+  
+ 
+  
